Fixed text align in nav links

--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -54,8 +54,11 @@
     &__link {
       display: flex;
       justify-content: center;
+      align-items: center;
+      text-align: center;
       height: 25vh;
       width: 100%;
+      padding: 0;
       background-color: $c-blue;
     }
   }
